assert timezone settings